--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,10 @@ variables:
 steps:
 - task: NuGetToolInstaller@1
 
+- task: UseNode@1
+  inputs:
+    version: '6.14.4'
+
 - task: NuGetCommand@2
   inputs:
     restoreSolution: '$(solution)'
