--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-      "gulp": "3.9.1",
-      "gulp-bower": "0.0.13",
-      "gulp-config": "0.3.0",
-      "gulp-less": "3.0.5",
-      "gulp-plumber": "1.1.0",
-      "gulp-minify-css": "1.2.4",
-      "gulp-watch": "4.3.5"
+    "gulp": "3.9.1",
+    "gulp-bower": "^0.0.13",
+    "gulp-config": "^0.3.0",
+    "gulp-less": "3.0.5",
+    "gulp-minify-css": "1.2.4",
+    "gulp-plumber": "1.1.0",
+    "gulp-watch": "4.3.5"
+  },
+  "dependencies": {
+    "gulp-browser": "^3.0.11"
   }
 }
