--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,16 @@ steps:
 - task: NuGetCommand@2
   inputs:
     restoreSolution: '$(solution)'
-
+- task: NodeTool@0
+  inputs:
+    versionSpec: '6.x'
+    force32bit: true
+- task: gulp@0
+  inputs:
+    gulpFile: 'gulpfile.js'
+    targets: 'Rung the gulp Node.js'
+    gulpjs: 'node_modules/gulp/bin/gulp.js'
+    enableCodeCoverage: false
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
