Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
     gulpFile: 'gulpfile.js'
     targets: 'Rung the gulp Node.js'
     gulpjs: 'node_modules/gulp/bin/gulp.js'
-    enableCodeCoverage: false
+    enableCodeCoverage: true
 
 - task: VSBuild@1
   inputs:
